<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <import type="android.view.View" />

    <import type="org.oppia.android.app.model.EventLog" />

    <variable
      name="viewModel"
      type="org.oppia.android.app.devoptions.vieweventlogs.EventLogItemViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
      android:id="@+id/event_log_time_and_priority_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/component_color_shared_item_background_solid_color"
      android:orientation="horizontal"
      app:layout_constraintBottom_toTopOf="@+id/view_event_logs_context_text_view"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <TextView
        android:id="@+id/view_event_logs_time_text_view"
        style="@style/Subtitle2ViewStart"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:background="@color/component_color_shared_item_background_solid_color"
        android:paddingStart="16dp"
        android:paddingTop="24dp"
        android:paddingEnd="16dp"
        android:paddingBottom="6dp"
        android:text="@{viewModel.processDateAndTime()}"
        android:textColor="@color/component_color_shared_text_input_layout_helper_text_color" />

      <TextView
        android:id="@+id/view_event_logs_priority_text_view"
        style="@style/Subtitle2ViewCenterVertical"
        android:layout_width="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="16dp"
        app:largeRoundedRectDrawableWithColor="@{viewModel.priorityBackgroundColor}"
        android:paddingStart="20dp"
        android:paddingTop="6dp"
        android:paddingEnd="20dp"
        android:paddingBottom="6dp"
        android:text="@{viewModel.formatPriorityString()}"
        android:textColor="@color/component_color_shared_secondary_4_text_color"
        android:visibility="@{viewModel.eventLog.priority != EventLog.Priority.PRIORITY_UNSPECIFIED ? View.VISIBLE : View.GONE }" />
    </LinearLayout>

    <TextView
      android:id="@+id/view_event_logs_context_text_view"
      style="@style/Subtitle1ViewStart"
      android:layout_width="match_parent"
      android:background="@color/component_color_shared_item_background_solid_color"
      android:paddingStart="16dp"
      android:paddingTop="6dp"
      android:paddingEnd="16dp"
      android:paddingBottom="20dp"
      android:text="@{viewModel.formatContextString()}"
      android:textColor="@color/component_color_shared_primary_dark_text_color"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/event_log_time_and_priority_layout" />

    <View
      android:id="@+id/view_divider"
      android:layout_width="match_parent"
      android:layout_height="2dp"
      android:background="@color/component_color_shared_divider_color"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/view_event_logs_context_text_view" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
